# AndroidX_Jetpack

./: build.gradle.kts  cement2_adapter_analysis.md  naming_suggestions.md  settings.gradle.kts
File-Module/: build.gradle.kts
File-Module/src/main/cpp/: AsyncBatchWriter.cpp  AsyncBatchWriter.h  AtomicFileOperator.cpp  AtomicFileOperator.h  BusinessDirectoryManager.cpp  BusinessDirectoryManager.h  CMakeLists.txt  ConcurrentLRUCache.h  FileInterface.cpp  FileInterface.h  FileLockManager.cpp  FileLockManager.h  FileManager.cpp  FileManager.h  FileMetadataManager.cpp  FileMetadataManager.h  FileOperationLog.h  FileOperationLogger.cpp  FileOperationLogger.h  file_module.cpp
File-Module/src/main/cpp/utils/: log_utils.h
JetpackMvvm/: build.gradle.kts
Router-Module/: build.gradle.kts
Thread-P2P-Module/: build.gradle.kts
Thread-P2P-Module/cpp/dns/: CMakeLists.txt  COMPLETION_SUMMARY.md  EXTENSIBILITY_PLAN.md  FEATURES.md  FILES_LIST.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_ROADMAP.md  PLANNING_SUMMARY.md  PROJECT_STATUS.md  README.md
Thread-P2P-Module/cpp/dns/docs/: API.md
Thread-P2P-Module/cpp/dns/example/: KotlinUsageExample.kt  test_dns.cpp
Thread-P2P-Module/cpp/dns/include/: MMDNSBlockingQueue.h  MMDNSCommon.h  MMDNSConnectionPool.h  MMDNSDataCache.h  MMDNSDualStackOptimizer.h  MMDNSEntrance.h  MMDNSHostManager.h  MMDNSHostModel.h  MMDNSHttpClient.h  MMDNSIPModel.h  MMDNSMonitor.h  MMDNSObjectPool.h  MMDNSServer.h  MMDNSServerHandle.h  MMDNSServerTask.h  MMDNSSocket.h  MMDNSSpeedChecker.h  MMPing.h
Thread-P2P-Module/cpp/dns/jni/: MMDNSConfig.kt  MMDNSExtensions.kt  MMDNSManager.kt  mmdns_jni.cpp
Thread-P2P-Module/cpp/dns/src/: MMDNSCommon.cpp  MMDNSConnectionPool.cpp  MMDNSDataCache.cpp  MMDNSDualStackOptimizer.cpp  MMDNSEntrance.cpp  MMDNSHostManager.cpp  MMDNSHostModel.cpp  MMDNSHttpClient.cpp  MMDNSIPModel.cpp  MMDNSMonitor.cpp  MMDNSServer.cpp  MMDNSServerHandle.cpp  MMDNSServerTask.cpp  MMDNSSocket.cpp  MMDNSSpeedChecker.cpp  MMPing.cpp
Thread-P2P-Module/src/main/cpp/: CMakeLists.txt  anr_trace.cpp  im_client_lib.cpp  nativelib.cpp
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
local-maven-repo/AndroidX_Jetpack/router-plugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
local-maven-repo/AndroidX_Jetpack/router-plugin/unspecified/: router-plugin-unspecified.jar.md5  router-plugin-unspecified.jar.sha1  router-plugin-unspecified.jar.sha256  router-plugin-unspecified.jar.sha512  router-plugin-unspecified.module  router-plugin-unspecified.module.md5  router-plugin-unspecified.module.sha1  router-plugin-unspecified.module.sha256  router-plugin-unspecified.module.sha512  router-plugin-unspecified.pom  router-plugin-unspecified.pom.md5  router-plugin-unspecified.pom.sha1  router-plugin-unspecified.pom.sha256  router-plugin-unspecified.pom.sha512
local-maven-repo/com/example/router-plugin/: maven-metadata.xml  maven-metadata.xml.md5  maven-metadata.xml.sha1  maven-metadata.xml.sha256  maven-metadata.xml.sha512
module-fundamental/: build.gradle.kts
router-plugin/: build.gradle.kts
(+232 files in other folders)
